--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 <body>
     <div class="container">
         <div class="row">
-            <div id="buttons"></div>
+            <div id="buttons">
+                <button>test button</button>
+            </div>
         </div>
         <div class="row">
             <div class="col-9" id="images"></div>
