--- a/index.html
+++ b/index.html
@@ -6,17 +6,23 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>GifTastic</title>
     <link rel="stylesheets" href="assets/css/reset.css">
-    <link rel="stylesheets" href="assets/css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheets" href="assets/css/style.css">
 </head>
 <body>
     <div class="container">
         <div class="row">
+            <h1>Sports Teams GIFs</h1>
+        </div>
+        <br>
+        <div class="row">
             <div id="buttons">
-                <button>test button</button>
+                <button type="button" class="btn btn-group-small btn-dark" data-name="Juventus">Juventus</button>
+                <button type="button" class="btn btn-group-small btn-danger" data-name="Manchester United">Manchester United</button>
             </div>
         </div>
+        <br>
         <div class="row">
             <div class="col-9" id="images"></div>
             <div class="col-3" id="form-input"></div>
