--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheets" href="assets/css/reset.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheets" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
     <div class="container">
@@ -18,14 +18,18 @@
         <br>
         <div class="row">
             <div id="buttons">
-                <button type="button" class="btn btn-group-small btn-dark" data-name="Juventus">Juventus</button>
-                <button type="button" class="btn btn-group-small btn-danger" data-name="Manchester United">Manchester United</button>
             </div>
         </div>
         <br>
         <div class="row">
             <div class="col-9" id="images"></div>
-            <div class="col-3" id="form-input"></div>
+            <div class="col-3" id="form-group">
+                <form>
+                    <label for="teamname">Enter team name here:</label>
+                    <input class="form-control" type="text" id="teamname" placeholder="Team name">
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                </form>
+            </div>
         </div>
     </div>
     <script src="assets/javascript/app.js"></script>
