--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <form>
                     <label for="teamname">Enter team name here:</label>
                     <input class="form-control" type="text" id="teamname" placeholder="Team name">
-                    <button type="submit" class="btn btn-primary">Submit</button>
+                    <button type="submit" class="btn btn-primary" id="add-team">Submit</button>
                 </form>
             </div>
         </div>
