Additional stylistic changes

--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
         </div>
         <br>
         <div class="row">
-            <div id="buttons">
+            <div id="buttons" class="col-10">
             </div>
         </div>
         <br>
         <div class="row">
-            <div class="col-9" id="images"></div>
+            <div class="col-7" id="images"></div>
             <div class="col-3" id="form-group">
                 <form>
                     <label for="teamname">Enter team name here:</label>
